Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
None
-
None
Description
Description of problem:
When an auto-delete queue is replicated, the replicating subscription attempts to auto-delete the queue after it has already been auto-deleted by the closing of the last non-HA consumer. An issue occurs if a new auto-delete queue with the same name is created shortly after the deletion of the previously queue. This can occur when a client subscribes to an auto-delete queue and is temporarily disconnected from the broker. It is possible for the cancelled HA subscription to remove the newly created queue from the queue registry since the old and new queues use the same names. The HA replicating subscription should not execute the auto-delete logic when the subscription is cancelled.
Version-Release number of selected component (if applicable):
Qpid 0.18
How reproducible:
Frequently
Steps to Reproduce:
Race condition between a consumer auto-deleting and recreating a queue of the same name and the HA replicating subscription auto-deleting the original queue. If the HA replicating subscription auto-deletes the original queue after the new queue is created, the new queue is removed from the queue registry.
Actual results:
New queue is removed from the queue registry.
Expected results:
HA subscription does not attempt to auto-delete the queue and therefore the new queue is not removed from the queue registry.
Additional info: https://bugzilla.redhat.com/show_bug.cgi?id=868364