Bug 868364 - QPID-4391: HA replicating subscriptions should not auto-delete queues

When an auto-delete queue is replicated, the replicating subscription attempts
to auto-delete the queue after it has already been auto-deleted by the closing
of the last non-HA consumer.  An issue occurs if a new auto-delete queue with
the same name is created shortly after the deletion of the previously queue.
This can occur when a client subscribes to an auto-delete queue and is
temporarily disconnected from the broker.  It is possible for the cancelled HA
subscription to remove the newly created queue from the queue registry since the
old and new queues use the same names.  The HA replicating subscription should
not execute the auto-delete logic when the subscription is cancelled.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1401709 13f79535-47bb-0310-9956-ffa450edef68